changes to application to make it safe and easy to publish , Started adding dbContext entity framework .netCore + sql integrations and webapi settings

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ Dashboard-FrontEnd/dist
 
 Dashboard-BackEnd/obj
 Dashboard-BackEnd/bin
+Dashboard-BackEnd/.config
+Dashboard-BackEnd/Properties/PublishProfiles
+Publishes/
 .vs/
 
 # Only exists if Bazel was run
