--- a/Dashboard-BackEnd/Dashboard-BackEnd.csproj
+++ b/Dashboard-BackEnd/Dashboard-BackEnd.csproj
@@ -5,5 +5,11 @@
     <RootNamespace>Dashboard_BackEnd</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+  </ItemGroup>
+
 
 </Project>
