git ignore for appsettings.Development.json and appsettings.Production.json application files that are needed to properly publish the application but they contain connectionStrings that i want to hide from GitHub repository

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ Dashboard-BackEnd/obj
 Dashboard-BackEnd/bin
 Dashboard-BackEnd/.config
 Dashboard-BackEnd/Properties/PublishProfiles
+
+Dashboard-BackEnd/appsettings.Development.json
+Dashboard-BackEnd/appsettings.Production.json
+
 Publishes/
 .vs/
 
