webforms poc developments with scripts to merge with document manager solution for berserker merge developments without support for front.end technologies for now

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,32 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+
+
+WebformsPOCDemo/WebPrivateAppSettings.config
+WebformsPOCDemo/WebPrivateConnectionStrings.config
+
+WebformsPOCDemo/bin
+WebformsPOCDemo/obj
+
+SharedLayer/bin
+SharedLayer/obj
+
+DataAccessLayer/bin
+DataAccessLayer/obj
+
+BusinessLogicLayer/bin
+BusinessLogicLayer/obj
+
+SharedLayer/bin
+SharedLayer/obj
+packages/
+
+
+
+
+
+
+
+
