Added authentication process and first system usage credentials for first user creation. Authentication still needs more work with captcha and sessions audit. Made more changes in classes for performance issues, added more fields for expense entity after yesterday successful expense record creation

--- a/TimeLineDashboard_Shared/TimeLineDashboard_Shared.csproj
+++ b/TimeLineDashboard_Shared/TimeLineDashboard_Shared.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Models\Documents.cs" />
     <Compile Include="Models\Currencies.cs" />
     <Compile Include="Models\Document_Types.cs" />
+    <Compile Include="Models\App_Permission_Type.cs" />
     <Compile Include="Models\ExpenseType.cs" />
     <Compile Include="Models\InvoiceType.cs" />
     <Compile Include="Models\SupplierType.cs" />
