--- a/TimeLineDashboard_DAL/TimeLineDashboard_DAL.csproj
+++ b/TimeLineDashboard_DAL/TimeLineDashboard_DAL.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataAccessLayerFacade.cs" />
+    <Compile Include="Operations\AppPermissionTypes_Operations.cs" />
     <Compile Include="Operations\InvoiceTypes_Operations.cs" />
     <Compile Include="Operations\ExpenseTypes_Operations.cs" />
     <Compile Include="Operations\DocumentTypes_Operations.cs" />
