add invoice process, add document process, table changes , ui changes (added dark mode to master pages) bootstrap simple layout and basic authentication support

--- a/TimeLineDashboard_DAL/TimeLineDashboard_DAL.csproj
+++ b/TimeLineDashboard_DAL/TimeLineDashboard_DAL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="DataAccessLayerFacade.cs" />
     <Compile Include="Operations\AppPermissionTypes_Operations.cs" />
+    <Compile Include="Operations\Invoices_Operations.cs" />
     <Compile Include="Operations\InvoiceTypes_Operations.cs" />
     <Compile Include="Operations\ExpenseTypes_Operations.cs" />
     <Compile Include="Operations\DocumentTypes_Operations.cs" />
@@ -50,7 +51,7 @@
     <Compile Include="Operations\SupplierTypes_Operations.cs" />
     <Compile Include="Operations\Currencies_Operations.cs" />
     <Compile Include="Operations\Countries_Vat_History_Operations.cs" />
-    <Compile Include="Operations\Documents_Operations.cs" />
+    <Compile Include="Operations\GeneralDocuments_Operations.cs" />
     <Compile Include="Operations\Suppliers_Operations.cs" />
     <Compile Include="Operations\ClientTypes_Operations.cs" />
     <Compile Include="Operations\States_Operations.cs" />
