--- a/WebformsPOCDemo/Web.config
+++ b/WebformsPOCDemo/Web.config
@@ -24,6 +24,10 @@
 			<forms loginUrl="Login.aspx" slidingExpiration="true" timeout="180"/>
 		</authentication>
 		
+		<pages maintainScrollPositionOnPostBack="true">
+			
+		</pages>
+		
 		<compilation debug="true" targetFramework="4.7.2"/>
 		<httpRuntime targetFramework="4.7.2"/>
 		
