--- a/TimeLineDashboard_Shared/TimeLineDashboard_Shared.csproj
+++ b/TimeLineDashboard_Shared/TimeLineDashboard_Shared.csproj
@@ -43,11 +43,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigurationHelper.cs" />
+    <Compile Include="Models\Bank_Accounts.cs" />
+    <Compile Include="Models\Bank_Account_Transactions_To_DB_Sync_From_UI.cs" />
     <Compile Include="Models\General_Documents.cs" />
     <Compile Include="Models\Currencies.cs" />
     <Compile Include="Models\Document_Types.cs" />
     <Compile Include="Models\App_Permission_Type.cs" />
     <Compile Include="Models\ExpenseType.cs" />
+    <Compile Include="Models\Bank_Account_Transactions.cs" />
     <Compile Include="Models\InvoiceType.cs" />
     <Compile Include="Models\SupplierType.cs" />
     <Compile Include="Models\ClientType.cs" />
@@ -60,6 +63,7 @@
     <Compile Include="Models\Users.cs" />
     <Compile Include="Models\Countries.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Responses\Bank_Account_Transactions_To_DB_Sync_For_UI.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
