--- a/TimeLineDashboard_Shared/TimeLineDashboard_Shared.csproj
+++ b/TimeLineDashboard_Shared/TimeLineDashboard_Shared.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Models\Users.cs" />
     <Compile Include="Models\Countries.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Responses\Azure_File_Download_For_UI.cs" />
     <Compile Include="Responses\Bank_Account_Transactions_To_DB_Sync_For_UI.cs" />
     <Compile Include="Responses\Expense_Auto_Complete_Suggestion_Based_On_Uploaded_File_Name_Response_For_UI.cs" />
   </ItemGroup>
